k8s/kafka.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka
  namespace: news-pipeline
  labels:
    app: kafka
spec:
  ports:
    - name: plaintext
      port: 9092
      targetPort: 9092
    - name: controller
      port: 9093
      targetPort: 9093
  selector:
    app: kafka

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: kafka
  namespace: news-pipeline
  labels:
    app: kafka
spec:
  serviceName: kafka
  replicas: 1
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        app: kafka
    spec:
      containers:
        - name: kafka
          image: bitnamilegacy/kafka:3.5
          ports:
            - containerPort: 9092
              name: plaintext
            - containerPort: 9093
              name: controller
          volumeMounts:
            - name: data
              mountPath: /bitnami/kafka
          livenessProbe:
            exec:
              command:
                - kafka-broker-api-versions.sh
                - --bootstrap-server
                - localhost:9092
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            exec:
              command:
                - kafka-broker-api-versions.sh
                - --bootstrap-server
                - localhost:9092
            initialDelaySeconds: 10
            periodSeconds: 5
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 10Gi
